--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "autoprefixer": "10.4.15",
+    "cloudinary": "^1.40.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.0",
+    "mongoose": "^7.5.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.3"
   }
 }
