added some api end points

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ CLOUDINARY_API_SECRET=J8cZhCn7jiCakeOirYVGCCEsl88
 
 RAZORPAY_KEY_ID=rzp_test_K2b9DoEr0LAPOe
 RAZORPAY_KEY_SECRET=ufvRRhTk76IsD6L16bA0pVRd
+
+NEXT_PUBLIC_GOOGLE_API_KEY=AIzaSyCUmmAqRuLeg0lnVYMzhZOc-Go0f0FbKtI
+SERVER_API=http://localhost:3000
