--- a/package.json
+++ b/package.json
@@ -13,17 +13,26 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^5.14.9",
+    "@react-google-maps/api": "^2.19.2",
+    "antd": "^5.9.2",
     "autoprefixer": "10.4.15",
     "cloudinary": "^1.40.0",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.6.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "tailwindcss": "3.3.3"
+    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-responsive-carousel": "^3.2.23",
+    "slugify": "^1.6.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "3.3.3",
+    "uniqid": "^5.4.0"
   }
 }
